# molecube-amaranth

./: .gitmodules  pyproject.toml
.github/workflows/: main.yml
boot/: boot.bif  boot.cmd
config/: nacs1_5_config.py  test_config.py  yb_config.py
molecube_amaranth/: build.py  clockout.py  config.py  csr.py  dds.py  fifo.py  inst_runner.py  interface.py  io.py  spi.py  toplevel.py  utils.py
scripts/: build_boot.py  build_plan.py
tests/: conftest.py  test_build.py  test_clockout.py  test_csr.py  test_dds.py  test_fifo.py  test_inst_runner.py  test_interface.py  test_spi.py  utils.py
