[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "molecube-amaranth"
dynamic = ["version"]
readme = "README.md"
description = "NaCs FPGA experiment control, amaranth port"
dependencies = [
    "amaranth ~= 0.5.0",
    "transactron ~= 0.5.0",
    "amaranth-axi @ git+https://github.com/yuyichao/amaranth-axi"
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
authors = [
  {name = "Yichao Yu", email = "yyc1992@gmail.com"},
]

[project.urls]
"Source Code" = "https://github.com/yuyichao/molecube-amaranth"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest >= 8.0.0",
    "pytest-xdist >= 3.5.0",
    "hypothesis >= 6.99.6",
]

[tool.setuptools]
packages = ["molecube_amaranth"]

[tool.setuptools_scm]
